# epitech-planner

./: .gitignore  README.md  pyproject.toml
credit_strategy/: __init__.py  __main__.py  api.py  config.py  excel.py  models.py
