[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-strategy"
version = "1.0.0"
description = "Generate Excel timeline of Epitech projects for credit planning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sacha Henneveux"}
]
keywords = ["epitech", "timeline", "credits", "gantt", "excel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = [
    "requests>=2.28.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
credit-strategy = "credit_strategy.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/credit-strategy"
Issues = "https://github.com/yourusername/credit-strategy/issues"

[tool.setuptools.packages.find]
include = ["credit_strategy*"]
